--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "ts-loader": "^8.0.12",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
-    "webpack-cli": "^4.3.0"
+    "webpack-cli": "^4.3.0",
+    "json-loader": "^0.5.7"
   }
 }
