--- a/package.json
+++ b/package.json
@@ -16,15 +16,16 @@
   "author": "Muatassim Aziz",
   "license": "ISC",
   "dependencies": {
-    "bootstrap": "^4.5.3",
-    "@types/bootstrap": "^5.0.1",
     "@types/axios": "^0.14.0",
+    "@types/bootstrap": "^5.0.1",
     "@types/sweetalert": "^2.0.4",
     "@types/toastr": "2.1.37",
     "axios": "^0.21.1",
-    "toastr": "^2.1.4",
+    "bootstrap": "^4.5.3",
     "jquery": "^3.5.1",
-    "sweetalert2": "^10.14.0"
+    "sampletypescriptlibraryproject": "file:../sampletypescriptlibraryproject/sampletypescriptlibraryproject-1.0.0.tgz",
+    "sweetalert2": "^10.14.0",
+    "toastr": "^2.1.4"
   },
   "devDependencies": {
     "babel-loader": "^8.2.2",
